src_old/objects/ProjectService__c.object
<CustomObject>
    <fields>
        <fullName>SalesTax__c</fullName>
        <label>SalesTax</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <formula>Service__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceObjective__c</fullName>
        <label>Service Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceRank__c</fullName>
        <description>This is the priority rank of a service to be performed</description>
        <label>ServiceRank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceSpecialization__c</fullName>
        <formula>TEXT(Service__r.Specialization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Specialization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceTemplateVersion__c</fullName>
        <formula>TEXT(Service__r.SurveyTemplateVersion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Template Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceTitle__c</fullName>
        <inlineHelpText>Description of Service -- visible to rep and client</inlineHelpText>
        <label>Service Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Project Services</relationshipLabel>
        <relationshipName>ProjectServices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingPreference__c</fullName>
        <description>Shipping Preference</description>
        <inlineHelpText>Shipping Preference</inlineHelpText>
        <label>Shipping Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ship to Worker</fullName>
                    <default>true</default>
                    <label>Ship to Worker</label>
                </value>
                <value>
                    <fullName>Ship to Location</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDayNumber__c</fullName>
        <inlineHelpText>Replaced with Day Number(s)</inlineHelpText>
        <label>Start Day Number - N/A FOR NEW PROJECTS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <inlineHelpText>Replaced by using Location Export/Import function</inlineHelpText>
        <label>Start Time - N/A FOR NEW PROJECTS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SurveyComplexityScoreDRPercent__c</fullName>
        <formula>((NumberofDefinedResponses__c * $Setup.SurveyScoreSettings__c.DefinedResponseWeight__c ) /  SurveyComplexityScore__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Complexity Score - DR Percent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SurveyComplexityScoreJumpPercent__c</fullName>
        <formula>(( NumberofJumpDefinedResponses__c * $Setup.SurveyScoreSettings__c.JumpQuestionWeight__c ) /  SurveyComplexityScore__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Complexity Score Jump %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SurveyComplexityScoreQPercent__c</fullName>
        <formula>(((NumberofQuestions__c - NumberofTargetQuestions__c) * $Setup.SurveyScoreSettings__c.QuestionWeight__c) /  SurveyComplexityScore__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Complexity Score Question %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SurveyComplexityScoreTQPercent__c</fullName>
        <formula>(($Setup.SurveyScoreSettings__c.QuestionWeight__c * NumberofTargetQuestions__c) / SurveyComplexityScore__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Complexity Score - TQ %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SurveyComplexityScore__c</fullName>
        <formula>($Setup.SurveyScoreSettings__c.QuestionWeight__c * NumberofTargetQuestions__c * NumberOfTargets__c) + ((NumberofQuestions__c - NumberofTargetQuestions__c) * $Setup.SurveyScoreSettings__c.QuestionWeight__c) +  (NumberofDefinedResponses__c * $Setup.SurveyScoreSettings__c.DefinedResponseWeight__c ) + ( NumberofJumpDefinedResponses__c *  $Setup.SurveyScoreSettings__c.JumpQuestionWeight__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Complexity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveyScoreThreshold__c</fullName>
        <formula>$Setup.SurveyScoreSettings__c.SurveyScoreThreshold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Score Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveyScoreWarning__c</fullName>
        <formula>$Setup.SurveyScoreSettings__c.SurveyScoreWarning__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Score Warning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetLastModifiedDate__c</fullName>
        <label>Target Last Modified Date</label>
        <summarizedField>ProjectServiceTarget__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>ProjectServiceTarget__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TargetLastModifiedDateforHT__c</fullName>
        <label>Target Last Modified Date for HT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TargetType__c</fullName>
        <label>Target Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetUse__c</fullName>
        <label>Target Use</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>IF( 

OR(ISNULL(ServiceTitle__c), isblank(ServiceTitle__c)),
Service__r.Name, 
ServiceTitle__c &amp;&quot; - &quot;&amp; Service__r.Name  

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VariantLanguage__c</fullName>
        <formula>IF(OR(ISNULL(Variant__c),Variant__c == &apos;&apos;), &apos;English&apos;, Variant__r.Language__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Variant</label>
        <referenceTo>Variant__c</referenceTo>
        <relationshipLabel>Project Services</relationshipLabel>
        <relationshipName>Project_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isManualGenInProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isManualGenInProgress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isVisibleToClient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the service visible to the client?</description>
        <inlineHelpText>Select to provide the client visibility to project service results, including photos.</inlineHelpText>
        <label>Is Visible to Client</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Service</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Services</pluralLabel>
    <recordTypes>
        <fullName>Booked</fullName>
        <active>true</active>
        <label>Booked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Canceled</fullName>
        <active>true</active>
        <label>Canceled</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed</fullName>
        <active>true</active>
        <label>Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ended</fullName>
        <active>true</active>
        <label>Ended</label>
    </recordTypes>
    <recordTypes>
        <fullName>InProgress</fullName>
        <active>true</active>
        <label>In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>Launched</fullName>
        <active>true</active>
        <label>Launched</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked</fullName>
        <active>true</active>
        <label>Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Planning</fullName>
        <active>true</active>
        <label>Planning</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BlockSingleServiceProject</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
    Project__r.IsSingleServiceProject__c, 
    ( 
       if(Service__r.IsSingleService__c, 
           if(Project__r.ServiceCount__c&gt;0,true,false ), 
          true)
    ),
    false
)
&amp;&amp; ISNEW()</errorConditionFormula>
        <errorMessage>Multiple Services not allowed for a Single Service Project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CanNotOverrideServiceClientVisibility</fullName>
        <active>true</active>
        <description>Can not override the service level client visibility if the visible is false</description>
        <errorConditionFormula>AND(Service__r.isVisibleToClient__c == false, isVisibleToClient__c == true)</errorConditionFormula>
        <errorMessage>The service is invisible by the definition and can not be overridden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_fieldchange_after_launched</fullName>
        <active>true</active>
        <description>NumberOfDays/NumberOfWorkers cannot be changed for a non-OH Mobile project after it is Launched.</description>
        <errorConditionFormula>AND(!Project__r.IsOneHubMobile__c,OR(ISCHANGED( NumberOfDays__c ), ISCHANGED( DayNumbers__c ), ISCHANGED( NumberOfWorkers__c )),UPPER(TEXT(Project__r.Status__c)) != &apos;PLANNING&apos;, UPPER(TEXT(Project__r.Status__c)) != &apos;BOOKED&apos;)</errorConditionFormula>
        <errorMessage>Number of Days / Number of Workers cannot be changed after a project is Launched.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_negative_numbers</fullName>
        <active>true</active>
        <description>Do not allow negative numbers for certain fields.</description>
        <errorConditionFormula>OR( NumberOfDays__c &lt; 0,  NumberOfWorkers__c &lt; 0,  EstimatedMinutes__c &lt; 0)</errorConditionFormula>
        <errorMessage>Negative numbers are not allowed, please correct them.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_zero_Number_Of_Days</fullName>
        <active>true</active>
        <errorConditionFormula>NumberOfDays__c &lt;= 0</errorConditionFormula>
        <errorMessage>Number of Days has to be a number &gt; 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Number_Of_Workers_ServiceAMW_Fal</fullName>
        <active>true</active>
        <description>Multiple workers are not allowed if the service-&gt;AllowMultipleWorkers is set to false.</description>
        <errorConditionFormula>AND( NumberOfWorkers__c &gt; 1,  Service__r.IsNumberOfWorkersRequired__c == false)</errorConditionFormula>
        <errorDisplayField>NumberOfWorkers__c</errorDisplayField>
        <errorMessage>Number Of Workers cannot be more than 1 if the service&apos;s AllowMultipleWorkers is set to false.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Number_of_Workers_For_Bundled_Pr</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Project__r.BundleServices__c == true,  NumberOfWorkers__c &gt; 1)</errorConditionFormula>
        <errorDisplayField>NumberOfWorkers__c</errorDisplayField>
        <errorMessage>Number of Workers cannot be more than 1 for a bundled project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Start_Day_Number_NumberOfDays</fullName>
        <active>true</active>
        <description>Checks if the start day number of the service falls within the boundaries of the project.</description>
        <errorConditionFormula>StartDayNumber__c +  NumberOfDays__c &gt;  Project__r.NumberOfDays__c + 1</errorConditionFormula>
        <errorMessage>Please enter a valid Start Day Number / Number of Days to make sure that the duration doesn&apos;t exceed the project Number of Days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NumberOfWorkerShouldLessThan100</fullName>
        <active>true</active>
        <description>The number of worker can not be bigger than 99</description>
        <errorConditionFormula>OR(NumberOfWorkers__c  &lt;=   0, NumberOfWorkers__c   &gt;  99)</errorConditionFormula>
        <errorDisplayField>NumberOfWorkers__c</errorDisplayField>
        <errorMessage>The number of workers must be between 1 and 99.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PcardLeadtime</fullName>
        <active>true</active>
        <errorConditionFormula>AND( PurchaseAmount__c &gt; 0, Today()  &lt; Project__r.StartDate__c  -  $Setup.PcardLeadTimeDuration__c.PcardLeadTime__c )</errorConditionFormula>
        <errorMessage>Pcard lead time must be 5 days or greater than start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Title_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(ServiceTitle__c), ISNULL(ServiceTitle__c))</errorConditionFormula>
        <errorDisplayField>ServiceTitle__c</errorDisplayField>
        <errorMessage>Service Title cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDayNumber_cannot_be_LE_0</fullName>
        <active>true</active>
        <errorConditionFormula>StartDayNumber__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>StartDayNumber__c</errorDisplayField>
        <errorMessage>Invalid Start Day Number, cannot be less than or equal to 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SurveyThreshold_CannotModifySurvey</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsSurveyScoreExceedThreshold__c, OR ( UPPER(TEXT(Project__r.Status__c)) == &apos;BOOKED&apos;,UPPER(TEXT(Project__r.Status__c)) == &apos;LAUNCHED&apos;,UPPER(TEXT(Project__r.Status__c)) == &apos;IN PROGRESS&apos; ))</errorConditionFormula>
        <errorMessage>Survey change not allowed. This change will result in Survey complexity threshold being exceeded.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateStartTime_ProjectType</fullName>
        <active>true</active>
        <description>allow starttime only for Non Bundled work</description>
        <errorConditionFormula>AND(
   Project__r.ProjectType__r.AllowBundlingOfServices__c ,
   NOT(ISBLANK(StartTime__c))
  )</errorConditionFormula>
        <errorDisplayField>StartTime__c</errorDisplayField>
        <errorMessage>Start Time is allowed only for Non-Bundled work.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Estimated_Minutes</fullName>
        <active>true</active>
        <errorConditionFormula>OR(EstimatedMinutes__c &lt; 0,  EstimatedMinutes__c &gt; 1440)</errorConditionFormula>
        <errorDisplayField>EstimatedMinutes__c</errorDisplayField>
        <errorMessage>Estimated Minutes cannot be less than 0 or more than 1440</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Filter_Product_byLocation_Allwd</fullName>
        <active>true</active>
        <errorConditionFormula>AND (CheckDistribution__c == true,  Service__r.AllowDistribution__c == false)</errorConditionFormula>
        <errorDisplayField>CheckDistribution__c</errorDisplayField>
        <errorMessage>Filtering products by location is not allowed for this service template.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_NoOfDays_BasedOnProjectWindow</fullName>
        <active>true</active>
        <description>Service Number Of Days should be within the Project Window</description>
        <errorConditionFormula>AND(ISCHANGED(NumberOfDays__c), OR(NumberOfDays__c&gt;Project__r.NumberOfDays__c,NumberOfDays__c &lt; 1))</errorConditionFormula>
        <errorMessage>Number of Days Should be within the Project Window</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Start_Time</fullName>
        <active>true</active>
        <description>To validate and make sure start time is in correct format</description>
        <errorConditionFormula>NOT(
OR(
ISBLANK(StartTime__c),
REGEX(StartTime__c, &quot;^(1[0-2]|0?[1-9]):[0-5][0-9] ([AaPp][Mm])$&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>StartTime__c</errorDisplayField>
        <errorMessage>Invalid Start Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validatePurchaseAmount</fullName>
        <active>true</active>
        <errorConditionFormula>OR( PurchaseAmount__c  &lt; 0,
PurchaseAmount__c   &gt; 500)</errorConditionFormula>
        <errorMessage>Please check to ensure purchase amount is between $0 and $500.</errorMessage>
    </validationRules>
</CustomObject>